tests/basic/bad/test55.pepa
% File: tests/bad/test55.pepa
% Syntax error, missing operator between parentheses
P = (a, r).P;
((P <> P) (P <> P))

